Fixed publications sidebar menu item spacing

--- a/app/assets/stylesheets/admin/_sidebar.css.scss
+++ b/app/assets/stylesheets/admin/_sidebar.css.scss
@@ -91,7 +91,7 @@
     width: 215px;
   }
   &.sidebar-menu-item-publications.collapsed a:first-child {
-    width: 205px;
+    width: 195px;
   }
 
   &.sidebar-menu-item-projects.collapsed a:first-child {
